cloudbank-v4/local-environment/k3s_data/manifests/ebaas/obaas-admin.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: '1.3.0'
    oracle/edition: 'COMMUNITY'
  name: obaas-admin
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: '1.3.0'
    oracle/edition: 'COMMUNITY'
  name: graalvm-compiler
  namespace: obaas-admin
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: graalvm-compiler
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: '1.3.0'
    oracle/edition: 'COMMUNITY'
  name: obaas-admin
  namespace: obaas-admin
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: obaas-admin
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: '1.3.0'
    oracle/edition: 'COMMUNITY'
  name: soc-ui
  namespace: obaas-admin
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
  selector:
    app.kubernetes.io/name: soc-ui
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: '1.3.0'
    oracle/edition: 'COMMUNITY'
  name: graalvm-compiler
  namespace: obaas-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: graalvm-compiler
  template:
    metadata:
      labels:
        app.kubernetes.io/name: graalvm-compiler
    spec:
      containers:
      - env:
        - name: EUREKA_SERVER_ADDRESS
          valueFrom:
            configMapKeyRef:
              key: url
              name: eureka-server
        image: 'localhost:30100/ebaas/graalvm-compiler:1.3.0'
        imagePullPolicy: IfNotPresent
        name: graalvm-compiler
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /uploads
          name: app-upload
        - mountPath: /compiler/bin
          name: compiler-script
      imagePullSecrets:
      - name: registry-pull-auth
      volumes:
      - emptyDir: {}
        name: app-upload
      - configMap:
          defaultMode: 511
          name: graalvm-compiler
        name: compiler-script
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: '1.3.0'
    oracle/edition: 'COMMUNITY'
  name: obaas-admin
  namespace: obaas-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: obaas-admin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: obaas-admin
    spec:
      containers:
      - env:
        - name: obaas.admin.version
          value: 1.2.0
        - name: registry.push.retry.limit
          value: "3"
        - name: DOCKER_HOST
          value: tcp://localhost:2375
        - name: registry.push.url
          valueFrom:
            secretKeyRef:
              key: registry.push_url
              name: registry-login
        - name: registry.pull.url
          valueFrom:
            secretKeyRef:
              key: registry.pull_url
              name: registry-login
        - name: registry.username
          valueFrom:
            secretKeyRef:
              key: registry.username
              name: registry-login
        - name: registry.password
          valueFrom:
            secretKeyRef:
              key: registry.password
              name: registry-login
        - name: registry.push.auth
          valueFrom:
            secretKeyRef:
              key: .dockerconfigjson
              name: registry-push-auth
        - name: registry.pull.auth
          valueFrom:
            secretKeyRef:
              key: .dockerconfigjson
              name: registry-pull-auth
        - name: registry.compartment
          valueFrom:
            secretKeyRef:
              key: registry.compartment
              name: registry-login
        - name: tnsadmin.secretname
          value: 'baas-tns-admin'
        - name: spring.datasource.username
          value: 'SYSTEM'
        - name: spring.datasource.password
          valueFrom:
            secretKeyRef:
              key: db.password
              name: 'baas-db-secrets'
        - name: db.service
          valueFrom:
            secretKeyRef:
              key: db.service
              name: 'baas-db-secrets'
        - name: db.name
          valueFrom:
            secretKeyRef:
              key: db.name
              name: 'baas-db-secrets'
        - name: spring.datasource.url
          value: jdbc:oracle:thin:@$(db.service)?TNS_ADMIN=/oracle/tnsadmin
        - name: CONNECT_STRING
          value: jdbc:oracle:thin:@$(db.service)?TNS_ADMIN=/oracle/tnsadmin
        - name: EUREKA_SERVER_ADDRESS
          valueFrom:
            configMapKeyRef:
              key: url
              name: eureka-server
        image: 'localhost:30100/ebaas/obaas-admin:1.3.0'
        imagePullPolicy: IfNotPresent
        name: obaas-admin
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /oracle/tnsadmin
          name: tns-admin
        - mountPath: /app/upload-dir
          name: upload-dir
          readOnly: false
      imagePullSecrets:
      - name: registry-pull-auth
      serviceAccountName: obaas-admin
      volumes:
      - name: tns-admin
        secret:
          secretName: 'baas-tns-admin'
      - emptyDir:
          sizeLimit: 1000Mi
        name: upload-dir
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: '1.3.0'
    oracle/edition: 'COMMUNITY'
  name: soc-ui
  namespace: obaas-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: soc-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: soc-ui
    spec:
      containers:
      - env:
        - name: CONSENT_ENDPOINT
          value: https://apexadb.oracle.com/ords/obaas_telemetry/heartbeat/data/
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: db.username
              name: 'baas-db-secrets'
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: db.password
              name: 'baas-db-secrets'
        - name: DB_SERVICE
          valueFrom:
            secretKeyRef:
              key: db.service
              name: 'baas-db-secrets'
        image: 'localhost:30100/ebaas/soc-ui:1.3.0'
        imagePullPolicy: IfNotPresent
        name: soc-ui
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - mountPath: /oracle/tnsadmin
          name: tns-admin
      imagePullSecrets:
      - name: registry-pull-auth
      serviceAccountName: soc-ui
      volumes:
      - name: tns-admin
        secret:
          secretName: 'baas-tns-admin'
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 4096m
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: '1.3.0'
    oracle/edition: 'COMMUNITY'
  name: soc-ui
  namespace: obaas-admin
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - backend:
          service:
            name: soc-ui
            port:
              name: http
        path: /soc(/|$)(.*)
        pathType: ImplementationSpecific
