cloudbank-v4/local-environment/k3s_data/manifests/ebaas/vault.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 1.17.2
    helm-version: 0.28.1
    oracle/edition: 'COMMUNITY'
  name: vault
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 1.17.2
    helm-version: 0.28.1
    helm.sh/chart: vault-0.28.1
    oracle/edition: 'COMMUNITY'
  name: vault
  namespace: vault
spec:
  ports:
  - name: https
    port: 8200
    targetPort: 8200
  - name: https-internal
    port: 8201
    targetPort: 8201
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/name: vault
    component: server
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault-agent-injector
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 1.17.2
    helm-version: 0.28.1
    oracle/edition: 'COMMUNITY'
  name: vault-agent-injector-svc
  namespace: vault
spec:
  ports:
  - name: https
    port: 443
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/name: vault-agent-injector
    component: webhook
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 1.17.2
    helm-version: 0.28.1
    helm.sh/chart: vault-0.28.1
    oracle/edition: 'COMMUNITY'
    vault-internal: "true"
  name: vault-internal
  namespace: vault
spec:
  clusterIP: None
  ports:
  - name: https
    port: 8200
    targetPort: 8200
  - name: https-internal
    port: 8201
    targetPort: 8201
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/name: vault
    component: server
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault-ui
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 1.17.2
    helm-version: 0.28.1
    helm.sh/chart: vault-0.28.1
    oracle/edition: 'COMMUNITY'
  name: vault-ui
  namespace: vault
spec:
  ports:
  - name: https
    port: 8200
    targetPort: 8200
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/name: vault
    component: server
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault-agent-injector
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 1.17.2
    component: webhook
    helm-version: 0.28.1
    oracle/edition: 'COMMUNITY'
  name: vault-agent-injector
  namespace: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/name: vault-agent-injector
      component: webhook
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: vault
        app.kubernetes.io/name: vault-agent-injector
        component: webhook
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/instance: vault
                app.kubernetes.io/name: vault-agent-injector
                component: webhook
            topologyKey: kubernetes.io/hostname
      containers:
      - args:
        - agent-inject
        - 2>&1
        image: docker.io/hashicorp/vault-k8s:1.4.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /health/ready
            port: 8080
            scheme: HTTPS
          initialDelaySeconds: 5
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 5
        name: sidecar-injector
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /health/ready
            port: 8080
            scheme: HTTPS
          initialDelaySeconds: 5
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        startupProbe:
          failureThreshold: 12
          httpGet:
            path: /health/ready
            port: 8080
            scheme: HTTPS
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /etc/webhook/certs
          name: webhook-certs
          readOnly: true
      hostNetwork: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 100
      serviceAccountName: vault-agent-injector
      volumes:
      - name: webhook-certs
        secret:
          secretName: injector-tls
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 1.17.2
    helm-version: 0.28.1
    oracle/edition: 'COMMUNITY'
  name: vault
  namespace: vault
spec:
  podManagementPolicy: Parallel
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/name: vault
      component: server
  serviceName: vault-internal
  template:
    metadata:
      annotations: null
      labels:
        app.kubernetes.io/instance: vault
        app.kubernetes.io/name: vault
        component: server
        helm.sh/chart: vault-0.28.1
    spec:
      containers:
      - args:
        - |
          /usr/local/bin/docker-entrypoint.sh vault server -dev -dev-listen-address='[::]:8200' -non-interactive
        command:
        - /bin/sh
        - -ec
        image: docker.io/hashicorp/vault:1.17.2
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - sleep 5 && kill -SIGTERM $(pidof vault)
        name: vault
        ports:
        - containerPort: 8200
          name: https
        - containerPort: 8201
          name: https-internal
        - containerPort: 8202
          name: https-rep
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /vault/userconfig/vault-config
          name: vault-config
          readOnly: true
        - mountPath: /vault/listener-tls
          name: vault-listener-tls
          readOnly: true
        - mountPath: /policies
          name: policies
          readOnly: true
        - mountPath: /home/vault
          name: home
      hostNetwork: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 100
      serviceAccountName: vault
      terminationGracePeriodSeconds: 10
      volumes:
      - name: vault-config
        secret:
          defaultMode: 420
          secretName: vault-config
      - name: vault-listener-tls
        secret:
          defaultMode: 420
          secretName: tls-certificate
      - configMap:
          defaultMode: 420
          name: policies
        name: policies
      - emptyDir: {}
        name: home
  updateStrategy:
    type: OnDelete
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: vault/injector-certificate
  labels:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault-agent-injector
    app.kubernetes.io/part-of: ebaas
    app.kubernetes.io/version: 1.17.2
    helm-version: 0.28.1
    oracle/edition: 'COMMUNITY'
  name: vault-agent-injector-cfg
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: ""
    service:
      name: vault-agent-injector-svc
      namespace: vault
      path: /mutate
  failurePolicy: Ignore
  matchPolicy: Exact
  name: vault.hashicorp.com
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - vault-agent-injector
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 30
